@@ -1,4 +1,4 @@
 urls=ldap://127.0.0.1:3900
-userName=uid=admin,ou=system
+userDn=uid=admin,ou=system
 password=secret
 base=dc=jayway,dc=se
