@@ -14,6 +14,9 @@ Changes in version 1.2 (xx.yy.2007)
 -------------------------------------------
 * Moved the core classes into the package ldap.core.
 
+* Deprecated the userName property in AbstractContextSource and changed
+  it to the more correct userDn.
+
 * Upgraded ApacheDS to 1.0.0.
 
 Changes in version 1.1.2 (1.12.2006)
